--- a/main/plugins/org.talend.hadoop.distribution.cdh580/plugin.xml
+++ b/main/plugins/org.talend.hadoop.distribution.cdh580/plugin.xml
@@ -93,7 +93,7 @@
         <libraryNeeded context="plugin:org.talend.hadoop.distribution.cdh580" 
             id="jetty-util-6.1.26.jar" 
             name="jetty-util-6.1.26.jar" 
-            mvn_uri="mvn:org.talend.libraries/jetty-util-6.1.26/6.0.0"/>
+            mvn_uri="mvn:org.mortbay.jetty/jetty-util/6.1.26"/>
         <!-- Azure libraries -->
 
         <!-- Map/Reduce libraries -->    
@@ -157,7 +157,7 @@
             context="plugin:org.talend.hadoop.distribution.cdh580"
             id="jodd-core-3.5.2.jar"
             name="jodd-core-3.5.2.jar"
-            mvn_uri="mvn:org.talend.libraries/jodd-core-3.5.2/6.0.0">
+            mvn_uri="mvn:org.jodd/jodd-core/3.5.2">
         </libraryNeeded>  
         
         <!-- Hive libraries -->
@@ -297,14 +297,14 @@
             context="plugin:org.talend.hadoop.distribution.cdh580"
             id="htrace-core4-4.0.1-incubating.jar"
             name="htrace-core4-4.0.1-incubating.jar"
-            mvn_uri="mvn:org.talend.libraries/htrace-core4-4.0.1-incubating/6.1.0">
+            mvn_uri="mvn:org.apache.htrace/htrace-core4/4.0.1-incubating">
         </libraryNeeded>
         
         <libraryNeeded
             context="plugin:org.talend.hadoop.distribution.cdh580"
             id="htrace-core-3.2.0-incubating.jar"
             name="htrace-core-3.2.0-incubating.jar"
-            mvn_uri="mvn:org.talend.libraries/htrace-core-3.2.0-incubating/6.1.0">
+            mvn_uri="mvn:org.apache.htrace/htrace-core/3.2.0-incubating">
         </libraryNeeded>   
         <libraryNeeded
             context="plugin:org.talend.hadoop.distribution.cdh580"
@@ -331,7 +331,7 @@
             context="plugin:org.talend.hadoop.distribution.cdh580"
             id="jackson-core-2.2.3.jar"
             name="jackson-core-2.2.3.jar"
-            mvn_uri="mvn:org.talend.libraries/jackson-core-2.2.3/6.1.0">
+            mvn_uri="mvn:org.talend.libraries/jackson-core-2.2.3/6.0.0">
         </libraryNeeded>
         
         <libraryNeeded
@@ -352,21 +352,21 @@
             context="plugin:org.talend.hadoop.distribution.cdh580"
             id="jackson-jaxrs-1.9.13.jar"
             name="jackson-jaxrs-1.9.13.jar"
-            mvn_uri="mvn:org.talend.libraries/jackson-jaxrs-1.9.13/6.0.0">
+            mvn_uri="mvn:org.codehaus.jackson/jackson-jaxrs/1.9.13">
         </libraryNeeded>
         
         <libraryNeeded
             context="plugin:org.talend.hadoop.distribution.cdh580"
             id="jackson-xc-1.9.13.jar"
             name="jackson-xc-1.9.13.jar"
-            mvn_uri="mvn:org.talend.libraries/jackson-xc-1.9.13/6.0.0">
+            mvn_uri="mvn:org.codehaus.jackson/jackson-xc/1.9.13">
         </libraryNeeded>
         
         <libraryNeeded
             context="plugin:org.talend.libraries.jline"
             id="jline-2.11.jar"
             name="jline-2.11.jar"
-            mvn_uri="mvn:org.talend.libraries/jline-2.11/6.0.0"
+            mvn_uri="mvn:jline/jline/2.11"
             uripath="platform:/plugin/org.talend.libraries.jline/lib/jline-2.11.jar">
         </libraryNeeded>
         
@@ -382,7 +382,7 @@
             context="plugin:org.talend.libraries.pig"
             id="elephant-bird-core-4.9.jar"
             name="elephant-bird-core-4.9.jar"
-            mvn_uri="mvn:org.talend.libraries/elephant-bird-core-4.9/6.0.0"
+            mvn_uri="mvn:com.twitter.elephantbird/elephant-bird-core/4.9"
             uripath="platform:/plugin/org.talend.libraries.pig/lib/elephant-bird-core-4.9.jar">
         </libraryNeeded>                
                         
@@ -390,7 +390,7 @@
             context="plugin:org.talend.libraries.pig"
             id="elephant-bird-hadoop-compat-4.9.jar"
             name="elephant-bird-hadoop-compat-4.9.jar"
-            mvn_uri="mvn:org.talend.libraries/elephant-bird-hadoop-compat-4.9/6.0.0"
+            mvn_uri="mvn:com.twitter.elephantbird/elephant-bird-hadoop-compat/4.9"
             uripath="platform:/plugin/org.talend.libraries.pig/lib/elephant-bird-hadoop-compat-4.9.jar">
         </libraryNeeded>                
                         
@@ -406,7 +406,7 @@
             context="plugin:org.talend.libraries.pig"
             id="elephant-bird-pig-4.9.jar"
             name="elephant-bird-pig-4.9.jar"
-            mvn_uri="mvn:org.talend.libraries/elephant-bird-pig-4.9/6.0.0"
+            mvn_uri="mvn:com.twitter.elephantbird/elephant-bird-pig/4.9"
             uripath="platform:/plugin/org.talend.libraries.pig/lib/elephant-bird-pig-4.9.jar">
         </libraryNeeded>
                         
@@ -480,7 +480,7 @@
             context="plugin:org.talend.hadoop.distribution.cdh580"
             id="automaton-1.11-8"
             name="automaton-1.11-8.jar"
-            mvn_uri="mvn:org.talend.libraries/automaton-1.11-8/6.1.0">
+            mvn_uri="mvn:org.talend.libraries/automaton-1.11-8/6.0.0">
         </libraryNeeded>
         
         <libraryNeeded
@@ -494,7 +494,7 @@
             context="plugin:org.talend.hadoop.distribution.cdh580"
             id="kafka-cdh5.8.1"
             name="kafka_2.10-0.9.0-kafka-2.0.0.jar"
-            mvn_uri="mvn:org.talend.libraries/kafka_2.10-0.9.0-kafka-2.0.0/6.1.0">
+            mvn_uri="mvn:org.talend.libraries/kafka_2.10-0.9.0-kafka-2.0.0/6.0.0">
         </libraryNeeded> 
         
         <libraryNeeded
