--- a/main/plugins/org.talend.hadoop.distribution.altus10/plugin.xml
+++ b/main/plugins/org.talend.hadoop.distribution.altus10/plugin.xml
@@ -44,7 +44,7 @@
             context="plugin:org.talend.hadoop.distribution.altus10"
             id="graphframes-0.5.0-spark2.1-s_2.11.jar"
             name="graphframes-0.5.0-spark2.1-s_2.11.jar"
-            mvn_uri="mvn:org.talend.libraries/graphframes-0.5.0-spark2.1-s_2.11/6.0.0">
+            mvn_uri="mvn:graphframes/graphframes/0.5.0-spark2.1-s_2.11">
         </libraryNeeded>
 
         <libraryNeeded
