--- a/main/plugins/org.talend.hadoop.distribution.cdh540/plugin.xml
+++ b/main/plugins/org.talend.hadoop.distribution.cdh540/plugin.xml
@@ -20,7 +20,7 @@
             context="plugin:org.talend.hadoop.distribution.cdh540"
             id="jets3t-0.9.0.jar"
             name="jets3t-0.9.0.jar"
-            mvn_uri="mvn:org.talend.libraries/jets3t-0.9.0/6.0.0">
+            mvn_uri="mvn:net.java.dev.jets3t/jets3t/0.9.0">
         </libraryNeeded>
 
         <libraryNeeded
