--- a/main/plugins/org.talend.hadoop.distribution.cdh550/plugin.xml
+++ b/main/plugins/org.talend.hadoop.distribution.cdh550/plugin.xml
@@ -57,7 +57,7 @@
         <libraryNeeded context="plugin:org.talend.hadoop.distribution.cdh550" 
             id="jetty-util-6.1.26.jar" 
             name="jetty-util-6.1.26.jar" 
-            mvn_uri="mvn:org.talend.libraries/jetty-util-6.1.26/6.0.0"/>
+            mvn_uri="mvn:org.mortbay.jetty/jetty-util/6.1.26"/>
         <!-- Azure libraries -->
 
         <!-- Map/Reduce libraries -->    
@@ -121,7 +121,7 @@
             context="plugin:org.talend.hadoop.distribution.cdh550"
             id="jodd-core-3.5.2.jar"
             name="jodd-core-3.5.2.jar"
-            mvn_uri="mvn:org.talend.libraries/jodd-core-3.5.2/6.0.0">
+            mvn_uri="mvn:org.jodd/jodd-core/3.5.2">
         </libraryNeeded>                
         
         <!-- HBase libraries -->
@@ -289,14 +289,14 @@
             context="plugin:org.talend.hadoop.distribution.cdh550"
             id="htrace-core4-4.0.1-incubating.jar"
             name="htrace-core4-4.0.1-incubating.jar"
-            mvn_uri="mvn:org.talend.libraries/htrace-core4-4.0.1-incubating/6.1.0">
+            mvn_uri="mvn:org.apache.htrace/htrace-core4/4.0.1-incubating">
         </libraryNeeded>
         
         <libraryNeeded
             context="plugin:org.talend.hadoop.distribution.cdh550"
             id="htrace-core-3.2.0-incubating.jar"
             name="htrace-core-3.2.0-incubating.jar"
-            mvn_uri="mvn:org.talend.libraries/htrace-core-3.2.0-incubating/6.1.0">
+            mvn_uri="mvn:org.apache.htrace/htrace-core/3.2.0-incubating">
         </libraryNeeded>
                  
         <libraryNeeded
@@ -324,7 +324,7 @@
             context="plugin:org.talend.hadoop.distribution.cdh550"
             id="jackson-core-2.2.3.jar"
             name="jackson-core-2.2.3.jar"
-            mvn_uri="mvn:org.talend.libraries/jackson-core-2.2.3/6.1.0">
+            mvn_uri="mvn:org.talend.libraries/jackson-core-2.2.3/6.0.0">
         </libraryNeeded>
         
         <libraryNeeded
@@ -345,21 +345,21 @@
             context="plugin:org.talend.hadoop.distribution.cdh550"
             id="jackson-jaxrs-1.9.13.jar"
             name="jackson-jaxrs-1.9.13.jar"
-            mvn_uri="mvn:org.talend.libraries/jackson-jaxrs-1.9.13/6.0.0">
+            mvn_uri="mvn:org.codehaus.jackson/jackson-jaxrs/1.9.13">
         </libraryNeeded>
         
         <libraryNeeded
             context="plugin:org.talend.hadoop.distribution.cdh550"
             id="jackson-xc-1.9.13.jar"
             name="jackson-xc-1.9.13.jar"
-            mvn_uri="mvn:org.talend.libraries/jackson-xc-1.9.13/6.0.0">
+            mvn_uri="mvn:org.codehaus.jackson/jackson-xc/1.9.13">
         </libraryNeeded>
         
         <libraryNeeded
             context="plugin:org.talend.libraries.jline"
             id="jline-2.11.jar"
             name="jline-2.11.jar"
-            mvn_uri="mvn:org.talend.libraries/jline-2.11/6.0.0"
+            mvn_uri="mvn:jline/jline/2.11"
             uripath="platform:/plugin/org.talend.libraries.jline/lib/jline-2.11.jar">
         </libraryNeeded>
         
@@ -375,7 +375,7 @@
             context="plugin:org.talend.libraries.pig"
             id="elephant-bird-core-4.9.jar"
             name="elephant-bird-core-4.9.jar"
-            mvn_uri="mvn:org.talend.libraries/elephant-bird-core-4.9/6.0.0"
+            mvn_uri="mvn:com.twitter.elephantbird/elephant-bird-core/4.9"
             uripath="platform:/plugin/org.talend.libraries.pig/lib/elephant-bird-core-4.9.jar">
         </libraryNeeded>                
                         
@@ -383,7 +383,7 @@
             context="plugin:org.talend.libraries.pig"
             id="elephant-bird-hadoop-compat-4.9.jar"
             name="elephant-bird-hadoop-compat-4.9.jar"
-            mvn_uri="mvn:org.talend.libraries/elephant-bird-hadoop-compat-4.9/6.0.0"
+            mvn_uri="mvn:com.twitter.elephantbird/elephant-bird-hadoop-compat/4.9"
             uripath="platform:/plugin/org.talend.libraries.pig/lib/elephant-bird-hadoop-compat-4.9.jar">
         </libraryNeeded>                
                         
@@ -399,7 +399,7 @@
             context="plugin:org.talend.libraries.pig"
             id="elephant-bird-pig-4.9.jar"
             name="elephant-bird-pig-4.9.jar"
-            mvn_uri="mvn:org.talend.libraries/elephant-bird-pig-4.9/6.0.0"
+            mvn_uri="mvn:com.twitter.elephantbird/elephant-bird-pig/4.9"
             uripath="platform:/plugin/org.talend.libraries.pig/lib/elephant-bird-pig-4.9.jar">
         </libraryNeeded>
                         
@@ -535,7 +535,7 @@
             context="plugin:org.talend.libraries.esb"
             id="joda-time-2.8.1.jar"
             name="joda-time-2.8.1.jar"
-            mvn_uri="mvn:org.talend.libraries/joda-time-2.8.1/6.0.0">
+            mvn_uri="mvn:joda-time/joda-time/2.8.1">
         </libraryNeeded>          
                 
         <libraryNeeded
