--- a/main/plugins/org.talend.hadoop.distribution.dataproc11/plugin.xml
+++ b/main/plugins/org.talend.hadoop.distribution.dataproc11/plugin.xml
@@ -117,19 +117,19 @@
 		    context="plugin:org.talend.hadoop.distribution.dataproc11"
 		    id="jackson-core-2.5.4"
 		    name="jackson-core-2.5.4.jar"
-		    mvn_uri="mvn:org.talend.libraries/jackson-core-2.5.4/6.0.0">
+		    mvn_uri="mvn:com.fasterxml.jackson.core/jackson-core/2.5.4">
         </libraryNeeded>
         <libraryNeeded
 		    context="plugin:org.talend.hadoop.distribution.dataproc11"
 		    id="jackson-core-asl-1.9.14-TALEND"
 		    name="jackson-core-asl-1.9.14-TALEND.jar"
-		    mvn_uri="mvn:org.talend.libraries/jackson-core-asl-1.9.14-TALEND/6.0.0">
+		    mvn_uri="mvn:org.codehaus.jackson/jackson-core-asl/1.9.14-TALEND">
         </libraryNeeded>
         <libraryNeeded
 		    context="plugin:org.talend.hadoop.distribution.dataproc11"
 		    id="jackson-mapper-asl-1.9.14-TALEND"
 		    name="jackson-mapper-asl-1.9.14-TALEND.jar"
-		    mvn_uri="mvn:org.talend.libraries/jackson-mapper-asl-1.9.14-TALEND/6.0.0">
+		    mvn_uri="mvn:org.codehaus.jackson/jackson-mapper-asl/1.9.14-TALEND">
         </libraryNeeded>
 		<libraryNeeded
 		    context="plugin:org.talend.hadoop.distribution.dataproc11"
@@ -173,14 +173,14 @@
             context="plugin:org.talend.hadoop.distribution.dataproc11"
             id="jodd-core-3.5.2"
             name="jodd-core-3.5.2.jar"
-            mvn_uri="mvn:org.talend.libraries/jodd-core-3.5.2/6.0.0">
+            mvn_uri="mvn:org.jodd/jodd-core/3.5.2">
         </libraryNeeded> 	 
         
         <libraryNeeded
             context="plugin:org.talend.hadoop.distribution.dataproc11"
             id="parquet-hadoop-bundle-1.6.0"
             name="parquet-hadoop-bundle-1.6.0.jar"
-            mvn_uri="mvn:org.talend.libraries/parquet-hadoop-bundle-1.6.0/6.0.0">
+            mvn_uri="mvn:com.twitter/parquet-hadoop-bundle/1.6.0">
         </libraryNeeded>
                 
         <!-- GraphFrames libraries -->
@@ -323,13 +323,13 @@
         <libraryNeeded context="plugin:org.talend.hadoop.distribution.dataproc11"
             id="kryo-shaded-3.0.3"
             name="kryo-shaded-3.0.3.jar"
-            mvn_uri="mvn:org.talend.libraries/kryo-shaded-3.0.3/6.0.0">
+            mvn_uri="mvn:com.esotericsoftware/kryo-shaded/3.0.3">
         </libraryNeeded>
         
         <libraryNeeded context="plugin:org.talend.hadoop.distribution.dataproc11"
             id="scala-library-2.11.8.jar"
             name="scala-library-2.11.8.jar"
-            mvn_uri="mvn:org.talend.libraries/scala-library-2.11.8/6.0.0"/>
+            mvn_uri="mvn:org.scala-lang/scala-library/2.11.8"/>
             
         <!-- Map/Reduce libraries -->
             
@@ -343,7 +343,7 @@
             context="plugin:org.talend.hadoop.distribution.dataproc11"
             id="avro-1.7.7"
             name="avro-1.7.7.jar"
-            mvn_uri="mvn:org.talend.libraries/avro-1.7.7/6.0.0">
+            mvn_uri="mvn:org.apache.avro/avro/1.7.7">
         </libraryNeeded>
         
         <libraryNeeded
@@ -364,21 +364,21 @@
             context="plugin:org.talend.hadoop.distribution.dataproc11"
             id="commons-logging-1.1.3"
             name="commons-logging-1.1.3.jar"
-            mvn_uri="mvn:org.talend.libraries/commons-logging-1.1.3/6.0.0">
+            mvn_uri="mvn:commons-logging/commons-logging/1.1.3">
         </libraryNeeded>
         
         <libraryNeeded
             context="plugin:org.talend.hadoop.distribution.dataproc11"
             id="jackson-core-asl-1.9.14-TALEND"
             name="jackson-core-asl-1.9.14-TALEND.jar"
-            mvn_uri="mvn:org.talend.libraries/jackson-core-asl-1.9.14-TALEND/6.0.0">
+            mvn_uri="mvn:org.codehaus.jackson/jackson-core-asl/1.9.14-TALEND">
         </libraryNeeded>
         
         <libraryNeeded
             context="plugin:org.talend.hadoop.distribution.dataproc11"
             id="jackson-mapper-asl-1.9.14-TALEND"
             name="jackson-mapper-asl-1.9.14-TALEND.jar"
-            mvn_uri="mvn:org.talend.libraries/jackson-mapper-asl-1.9.14-TALEND/6.0.0">
+            mvn_uri="mvn:org.codehaus.jackson/jackson-mapper-asl/1.9.14-TALEND">
         </libraryNeeded>
         
         <libraryNeeded
@@ -392,21 +392,21 @@
             context="plugin:org.talend.hadoop.distribution.dataproc11"
             id="commons-codec-1.4"
             name="commons-codec-1.4.jar"
-            mvn_uri="mvn:org.talend.libraries/commons-codec-1.4/6.0.0">
+            mvn_uri="mvn:commons-codec/commons-codec/1.4">
         </libraryNeeded>
         
         <libraryNeeded
             context="plugin:org.talend.hadoop.distribution.dataproc11"
             id="commons-lang-2.6"
             name="commons-lang-2.6.jar"
-            mvn_uri="mvn:org.talend.libraries/commons-lang-2.6/6.0.0">
+            mvn_uri="mvn:commons-lang/commons-lang/2.6">
         </libraryNeeded>
         
         <libraryNeeded
             context="plugin:org.talend.hadoop.distribution.dataproc11"
             id="commons-configuration-1.6"
             name="commons-configuration-1.6.jar"
-            mvn_uri="mvn:org.talend.libraries/commons-configuration-1.6/6.0.0">
+            mvn_uri="mvn:commons-configuration/commons-configuration/1.6">
         </libraryNeeded>
         
         <libraryNeeded
@@ -427,7 +427,7 @@
             context="plugin:org.talend.hadoop.distribution.dataproc11"
             id="commons-collections-3.2.2"
             name="commons-collections-3.2.2.jar"
-            mvn_uri="mvn:org.talend.libraries/commons-collections-3.2.2/6.0.0">
+            mvn_uri="mvn:commons-collections/commons-collections/3.2.2">
         </libraryNeeded>
 
 		<!-- hive on spark -->
@@ -449,7 +449,7 @@
             context="plugin:org.talend.hadoop.distribution.dataproc11"
             id="jets3t-0.9.0"
             name="jets3t-0.9.0.jar"
-            mvn_uri="mvn:org.talend.libraries/jets3t-0.9.0/6.0.0">
+            mvn_uri="mvn:net.java.dev.jets3t/jets3t/0.9.0">
         </libraryNeeded>
         <libraryNeeded
             context="plugin:org.talend.hadoop.distribution.dataproc11"
