--- a/main/plugins/org.talend.hadoop.distribution.hdinsight360/plugin.xml
+++ b/main/plugins/org.talend.hadoop.distribution.hdinsight360/plugin.xml
@@ -56,7 +56,7 @@
               bundleID="org.apache.servicemix.bundles.wsdl4j"
               context="plugin:org.talend.libraries.apache.cxf"
               id="wsdl4j-1.6.3.jar"
-              mvn_uri="mvn:org.talend.libraries/wsdl4j-1.6.3/6.0.0"
+              mvn_uri="mvn:wsdl4j/wsdl4j/1.6.3"
               name="wsdl4j-1.6.3.jar"
               uripath="platform:/plugin/org.talend.libraries.apache.cxf/lib/wsdl4j-1.6.3.jar">
         </libraryNeeded>
@@ -64,14 +64,14 @@
             context="Third party library to connect to Windows Azure"
             id="azure-storage-5.0.0.jar"
             name="azure-storage-5.0.0.jar"
-            mvn_uri="mvn:org.talend.libraries/azure-storage-5.0.0/6.0.0">
+            mvn_uri="mvn:com.microsoft.azure/azure-storage/5.0.0">
         </libraryNeeded>
 
         <libraryNeeded
             context="plugin:org.talend.libraries.jackson"
             id="jackson-core-2.8.9.jar"
             name="jackson-core-2.8.9.jar"
-            mvn_uri="mvn:org.talend.libraries/jackson-core-2.8.9/6.0.0"
+            mvn_uri="mvn:com.fasterxml.jackson.core/jackson-core/2.8.9"
             uripath="platform:/plugin/org.talend.libraries.jackson/lib/jackson-core-2.8.9.jar">
         </libraryNeeded>
         <libraryNeeded
@@ -85,18 +85,18 @@
         	context="plugin:org.talend.hadoop.distribution.hdinsight360"
         	id="commons-collections-3.2.2.jar"
         	name="commons-collections-3.2.2.jar"
-        	mvn_uri="mvn:org.talend.libraries/commons-collections-3.2.2/6.0.0"/>
+        	mvn_uri="mvn:commons-collections/commons-collections/3.2.2"/>
         <libraryNeeded
         	context="plugin:org.talend.hadoop.distribution.hdinsight360"
         	id="guava-14.0.1.jar"
         	name="guava-14.0.1.jar"
-        	mvn_uri="mvn:org.talend.libraries/guava-14.0.1/6.0.0">
+        	mvn_uri="mvn:com.google.guava/guava/14.0.1">
         </libraryNeeded>
         <libraryNeeded
         	context="plugin:org.talend.hadoop.distribution.hdinsight360"
         	id="jackson-core-asl-1.9.14-TALEND"
         	name="jackson-core-asl-1.9.14-TALEND.jar"
-        	mvn_uri="mvn:org.talend.libraries/jackson-core-asl-1.9.14-TALEND/6.0.0"/>
+        	mvn_uri="mvn:org.codehaus.jackson/jackson-core-asl/1.9.14-TALEND"/>
 
         <!-- Hive libraries -->
         <libraryNeeded
@@ -135,7 +135,7 @@
             context="plugin:org.talend.hadoop.distribution.hdinsight360"
             id="elephant-bird-pig-4.9.jar"
             name="elephant-bird-pig-4.9.jar"
-            mvn_uri="mvn:org.talend.libraries/elephant-bird-pig-4.9/6.0.0">
+            mvn_uri="mvn:com.twitter.elephantbird/elephant-bird-pig/4.9">
         </libraryNeeded>
         <libraryNeeded
             context="plugin:org.talend.hadoop.distribution.hdinsight360"
@@ -147,19 +147,19 @@
             context="plugin:org.talend.hadoop.distribution.hdinsight360"
             id="elephant-bird-pig-4.9.jar"
             name="elephant-bird-pig-4.9.jar"
-            mvn_uri="mvn:org.talend.libraries/elephant-bird-pig-4.9/6.0.0">
+            mvn_uri="mvn:com.twitter.elephantbird/elephant-bird-pig/4.9">
         </libraryNeeded>
         <libraryNeeded
             context="plugin:org.talend.hadoop.distribution.hdinsight360"
             id="elephant-bird-core-4.9.jar"
             name="elephant-bird-core-4.9.jar"
-            mvn_uri="mvn:org.talend.libraries/elephant-bird-core-4.9/6.0.0">
+            mvn_uri="mvn:com.twitter.elephantbird/elephant-bird-core/4.9">
         </libraryNeeded>
         <libraryNeeded
             context="plugin:org.talend.hadoop.distribution.hdinsight360"
             id="elephant-bird-hadoop-compat-4.9.jar"
             name="elephant-bird-hadoop-compat-4.9.jar"
-            mvn_uri="mvn:org.talend.libraries/elephant-bird-hadoop-compat-4.9/6.0.0">
+            mvn_uri="mvn:com.twitter.elephantbird/elephant-bird-hadoop-compat/4.9">
         </libraryNeeded>
         <libraryNeeded
             context="plugin:org.talend.hadoop.distribution.hdinsight360"
@@ -173,28 +173,28 @@
 			context="plugin:org.talend.hadoop.distribution.hdinsight360"
 			id="graphframes-0.5.0-spark2.1-s_2.11.jar" 
 			name="graphframes-0.5.0-spark2.1-s_2.11.jar"
-			mvn_uri="mvn:org.talend.libraries/graphframes-0.5.0-spark2.1-s_2.11/6.0.0">
+			mvn_uri="mvn:graphframes/graphframes/0.5.0-spark2.1-s_2.11">
 		</libraryNeeded>
 
         <!-- Spark 2 libraries-->
-        <libraryNeeded context="plugin:org.talend.hadoop.distribution.hdinsight360" id="avro-1.7.7" name="avro-1.7.7.jar" mvn_uri="mvn:org.talend.libraries/avro-1.7.7/6.0.0"/>
-        <libraryNeeded context="plugin:org.talend.hadoop.distribution.hdinsight360" id="commons-codec-1.10" name="commons-codec-1.10.jar" mvn_uri="mvn:org.talend.libraries/commons-codec-1.10/6.0.0"/>
-        <libraryNeeded context="plugin:org.talend.hadoop.distribution.hdinsight360" id="commons-lang-2.6" name="commons-lang-2.6.jar" mvn_uri="mvn:org.talend.libraries/commons-lang-2.6/6.0.0"/>
-        <libraryNeeded context="plugin:org.talend.hadoop.distribution.hdinsight360" id="commons-lang3-3.5" name="commons-lang3-3.5.jar" mvn_uri="mvn:org.talend.libraries/commons-lang3-3.5/6.0.0"/>
-        <libraryNeeded context="plugin:org.talend.hadoop.distribution.hdinsight360" id="commons-logging-1.1.3" name="commons-logging-1.1.3.jar" mvn_uri="mvn:org.talend.libraries/commons-logging-1.1.3/6.0.0"/>
+        <libraryNeeded context="plugin:org.talend.hadoop.distribution.hdinsight360" id="avro-1.7.7" name="avro-1.7.7.jar" mvn_uri="mvn:org.apache.avro/avro/1.7.7"/>
+        <libraryNeeded context="plugin:org.talend.hadoop.distribution.hdinsight360" id="commons-codec-1.10" name="commons-codec-1.10.jar" mvn_uri="mvn:commons-codec/commons-codec/1.10"/>
+        <libraryNeeded context="plugin:org.talend.hadoop.distribution.hdinsight360" id="commons-lang-2.6" name="commons-lang-2.6.jar" mvn_uri="mvn:commons-lang/commons-lang/2.6"/>
+        <libraryNeeded context="plugin:org.talend.hadoop.distribution.hdinsight360" id="commons-lang3-3.5" name="commons-lang3-3.5.jar" mvn_uri="mvn:org.apache.commons/commons-lang3/3.5"/>
+        <libraryNeeded context="plugin:org.talend.hadoop.distribution.hdinsight360" id="commons-logging-1.1.3" name="commons-logging-1.1.3.jar" mvn_uri="mvn:commons-logging/commons-logging/1.1.3"/>
         <libraryNeeded context="plugin:org.talend.hadoop.distribution.hdinsight360" id="hadoop-auth-2.7.3.2.6.0.2-76" name="hadoop-auth-2.7.3.2.6.0.2-76.jar" mvn_uri="mvn:org.talend.libraries/hadoop-auth-2.7.3.2.6.0.2-76/6.0.0"/>
         <libraryNeeded context="plugin:org.talend.hadoop.distribution.hdinsight360" id="hadoop-common-2.7.3.2.6.0.2-76" name="hadoop-common-2.7.3.2.6.0.2-76.jar" mvn_uri="mvn:org.talend.libraries/hadoop-common-2.7.3.2.6.0.2-76/6.0.0"/>
         <libraryNeeded context="plugin:org.talend.hadoop.distribution.hdinsight360" id="hadoop-hdfs-2.7.3.2.6.0.2-76" name="hadoop-hdfs-2.7.3.2.6.0.2-76.jar" mvn_uri="mvn:org.talend.libraries/hadoop-hdfs-2.7.3.2.6.0.2-76/6.0.0"/>
         <libraryNeeded context="plugin:org.talend.hadoop.distribution.hdinsight360" id="hadoop-mapreduce-client-app-2.7.3.2.6.0.2-76" name="hadoop-mapreduce-client-app-2.7.3.2.6.0.2-76.jar" mvn_uri="mvn:org.talend.libraries/hadoop-mapreduce-client-app-2.7.3.2.6.0.2-76/6.0.0"/>
         <libraryNeeded context="plugin:org.talend.hadoop.distribution.hdinsight360" id="hadoop-mapreduce-client-core-2.7.3.2.6.0.2-76" name="hadoop-mapreduce-client-core-2.7.3.2.6.0.2-76.jar" mvn_uri="mvn:org.talend.libraries/hadoop-mapreduce-client-core-2.7.3.2.6.0.2-76/6.0.0"/>
         <libraryNeeded context="plugin:org.talend.hadoop.distribution.hdinsight360" id="hadoop-mapreduce-client-jobclient-2.7.3.2.6.0.2-76" name="hadoop-mapreduce-client-jobclient-2.7.3.2.6.0.2-76.jar" mvn_uri="mvn:org.talend.libraries/hadoop-mapreduce-client-jobclient-2.7.3.2.6.0.2-76/6.0.0"/>
-        <libraryNeeded context="plugin:org.talend.hadoop.distribution.hdinsight360" id="jodd-core-3.5.2" name="jodd-core-3.5.2.jar" mvn_uri="mvn:org.talend.libraries/jodd-core-3.5.2/6.0.0"/>
-        <libraryNeeded context="plugin:org.talend.hadoop.distribution.hdinsight360" id="kryo-shaded-3.0.3" name="kryo-shaded-3.0.3.jar" mvn_uri="mvn:org.talend.libraries/kryo-shaded-3.0.3/6.0.0"/>
+        <libraryNeeded context="plugin:org.talend.hadoop.distribution.hdinsight360" id="jodd-core-3.5.2" name="jodd-core-3.5.2.jar" mvn_uri="mvn:org.jodd/jodd-core/3.5.2"/>
+        <libraryNeeded context="plugin:org.talend.hadoop.distribution.hdinsight360" id="kryo-shaded-3.0.3" name="kryo-shaded-3.0.3.jar" mvn_uri="mvn:com.esotericsoftware/kryo-shaded/3.0.3"/>
         <libraryNeeded context="plugin:org.talend.hadoop.distribution.hdinsight360" id="parquet-format-2.3.0-incubating" name="parquet-format-2.3.0-incubating.jar" mvn_uri="mvn:org.talend.libraries/parquet-format-2.3.0-incubating/6.0.0"/>
         <libraryNeeded context="plugin:org.talend.hadoop.distribution.hdinsight360" id="parquet-hadoop-1.8.1" name="parquet-hadoop-1.8.1.jar" mvn_uri="mvn:org.talend.libraries/parquet-hadoop-1.8.1/6.0.0"/>
-        <libraryNeeded context="plugin:org.talend.hadoop.distribution.hdinsight360" id="parquet-hadoop-bundle-1.6.0" name="parquet-hadoop-bundle-1.6.0.jar" mvn_uri="mvn:org.talend.libraries/parquet-hadoop-bundle-1.6.0/6.0.0"/>
-        <libraryNeeded context="plugin:org.talend.hadoop.distribution.hdinsight360" id="scala-library-2.11.8" name="scala-library-2.11.8.jar" mvn_uri="mvn:org.talend.libraries/scala-library-2.11.8/6.0.0"/>
-        <libraryNeeded context="plugin:org.talend.hadoop.distribution.hdinsight360" id="scala-reflect-2.11.8" name="scala-reflect-2.11.8.jar" mvn_uri="mvn:org.talend.libraries/scala-reflect-2.11.8/6.0.0"/>
+        <libraryNeeded context="plugin:org.talend.hadoop.distribution.hdinsight360" id="parquet-hadoop-bundle-1.6.0" name="parquet-hadoop-bundle-1.6.0.jar" mvn_uri="mvn:com.twitter/parquet-hadoop-bundle/1.6.0"/>
+        <libraryNeeded context="plugin:org.talend.hadoop.distribution.hdinsight360" id="scala-library-2.11.8" name="scala-library-2.11.8.jar" mvn_uri="mvn:org.scala-lang/scala-library/2.11.8"/>
+        <libraryNeeded context="plugin:org.talend.hadoop.distribution.hdinsight360" id="scala-reflect-2.11.8" name="scala-reflect-2.11.8.jar" mvn_uri="mvn:org.scala-lang/scala-reflect/2.11.8"/>
         <libraryNeeded context="plugin:org.talend.hadoop.distribution.hdinsight360" id="spark-catalyst_2.11-2.1.0.2.6.0.2-76" name="spark-catalyst_2.11-2.1.0.2.6.0.2-76.jar" mvn_uri="mvn:org.talend.libraries/spark-catalyst_2.11-2.1.0.2.6.0.2-76/6.0.0"/>
         <libraryNeeded context="plugin:org.talend.hadoop.distribution.hdinsight360" id="spark-core_2.11-2.1.0.2.6.0.2-76" name="spark-core_2.11-2.1.0.2.6.0.2-76.jar" mvn_uri="mvn:org.talend.libraries/spark-core_2.11-2.1.0.2.6.0.2-76/6.0.0"/>
         <libraryNeeded context="plugin:org.talend.hadoop.distribution.hdinsight360" id="spark-graphx_2.11-2.1.0.2.6.0.2-76" name="spark-graphx_2.11-2.1.0.2.6.0.2-76.jar" mvn_uri="mvn:org.talend.libraries/spark-graphx_2.11-2.1.0.2.6.0.2-76/6.0.0"/>
