--- a/main/plugins/org.talend.designer.components.bigdata/components/tDBFSPut/tDBFSPut_messages.properties
+++ b/main/plugins/org.talend.designer.components.bigdata/components/tDBFSPut/tDBFSPut_messages.properties
@@ -16,3 +16,4 @@ DIE_ON_ERROR.NAME=Die on error
 NB_FILE.NAME=Number of files
 TRANSFER_MESSAGES.NAME=Transfer messages
 USE_EXISTING_CONNECTION.NAME=Use an existing connection
+CONNECTION.NAME=Component list
