--- a/main/plugins/org.talend.designer.components.bigdata/components/tDBFSGet/tDBFSGet_messages.properties
+++ b/main/plugins/org.talend.designer.components.bigdata/components/tDBFSGet/tDBFSGet_messages.properties
@@ -17,3 +17,4 @@ NB_FILE.NAME=Number of files
 TRANSFER_MESSAGES.NAME=Transfer messages
 USE_EXISTING_CONNECTION.NAME=Use an existing connection
 INCLUDSUBDIR.NAME=Includes subdirectories
+CONNECTION.NAME=Component list
