--- a/main/plugins/org.talend.designer.components.bigdata/components/tDBFSGet/tDBFSGet_messages.properties
+++ b/main/plugins/org.talend.designer.components.bigdata/components/tDBFSGet/tDBFSGet_messages.properties
@@ -3,7 +3,7 @@ LONG_NAME=Get files from DBFS.
 
 DATABRICKS_ENDPOINT.NAME=Endpoint
 DATABRICKS_TOKEN.NAME=Token
-DATABRICKS_DBFS_FOLDER.NAME=DBFS input folder
+DATABRICKS_DBFS_FOLDER.NAME=DBFS directory
 
 FILES.ITEM.FILEMASK=Filemask
 FILES.ITEM.NEWNAME=New name
