--- a/main/plugins/org.talend.designer.components.bigdata/components/tDBFSPut/tDBFSPut_messages.properties
+++ b/main/plugins/org.talend.designer.components.bigdata/components/tDBFSPut/tDBFSPut_messages.properties
@@ -3,7 +3,7 @@ LONG_NAME=Put files on DBFS.
 
 DATABRICKS_ENDPOINT.NAME=Endpoint
 DATABRICKS_TOKEN.NAME=Token
-DATABRICKS_DBFS_FOLDER.NAME=DBFS output folder
+DATABRICKS_DBFS_FOLDER.NAME=DBFS directory
 
 FILES.ITEM.FILEMASK=Filemask
 FILES.ITEM.NEWNAME=New name
