--- a/main/plugins/org.talend.hadoop.distribution.databricks/plugin.xml
+++ b/main/plugins/org.talend.hadoop.distribution.databricks/plugin.xml
@@ -8,7 +8,7 @@
             context="plugin:org.talend.hadoop.distribution.databricks"
             id="talend-bigdata-launcher-platform-1.2.7-20180828.jar"
             name="talend-bigdata-launcher-platform-1.2.7-20180828.jar"
-            mvn_uri="mvn:org.talend.libraries/talend-bigdata-launcher-platform/1.2.7-20180828">
+            mvn_uri="mvn:org.talend.libraries/talend-bigdata-launcher-platform-1.2.7-20180828/6.0.0">
         </libraryNeeded>
                            
 		 <libraryNeeded
