--- a/main/plugins/org.talend.hadoop.distribution.databricks/plugin.xml
+++ b/main/plugins/org.talend.hadoop.distribution.databricks/plugin.xml
@@ -110,6 +110,12 @@
         </libraryNeeded>
         <libraryNeeded
             context="plugin:org.talend.hadoop.distribution.databricks"
+            id="spark-mllib_2.11-2.2.1.jar"
+            name="spark-mllib_2.11-2.2.1.jar"
+            mvn_uri="mvn:org.apache.spark/spark-mllib_2.11/2.2.1">
+        </libraryNeeded>
+        <libraryNeeded
+            context="plugin:org.talend.hadoop.distribution.databricks"
             id="spark-network-common_2.11-2.2.1.jar"
             name="spark-network-common_2.11-2.2.1.jar"
             mvn_uri="mvn:org.apache.spark/spark-network-common_2.11/2.2.1">
@@ -176,6 +182,30 @@
             uripath="platform:/plugin/org.talend.libraries.jackson/lib/json_simple-1.1.jar">
         </libraryNeeded>
         
+        <libraryNeeded
+            context="plugin:org.talend.hadoop.distribution.databricks"
+            id="spark-streaming-kinesis-asl_2.11-2.2.0.jar"
+            name="spark-streaming-kinesis-asl_2.11-2.2.0.jar"
+            mvn_uri="mvn:org.apache.spark/spark-streaming-kinesis-asl_2.11/2.2.0"/>
+
+       <libraryNeeded
+            context="plugin:org.talend.hadoop.distribution.databricks"
+            id="amazon-kinesis-client-1.8.1.jar"
+            name="amazon-kinesis-client-1.8.1.jar"
+            mvn_uri="mvn:com.amazonaws/amazon-kinesis-client/1.8.1"/>
+
+        <libraryNeeded
+            context="plugin:org.talend.hadoop.distribution.databricks"
+            id="aws-java-sdk-core-1.11.160.jar"
+            name="aws-java-sdk-core-1.11.160.jar"
+            mvn_uri="mvn:com.amazonaws/aws-java-sdk-core/1.11.160"/>
+
+        <libraryNeeded
+            context="plugin:org.talend.hadoop.distribution.databricks"
+            id="aws-java-sdk-kinesis-1.11.160.jar"
+            name="aws-java-sdk-kinesis-1.11.160.jar"
+            mvn_uri="mvn:org.talend.libraries/aws-java-sdk-kinesis-1.11.160/6.0.0"/>
+
         <!-- Big Data launcher group -->
         <libraryNeededGroup
                 description="Big Data launcher libraries for Databricks"
@@ -207,6 +237,7 @@
              <library id="spark-core_2.11-2.2.1.jar"/>
              <library id="spark-graphx_2.11-2.2.1.jar"/>
              <library id="spark-mllib-local_2.11-2.2.1.jar"/>
+             <library id="spark-mllib_2.11-2.2.1.jar"/>
              <library id="spark-sql_2.11-2.2.1.jar"/>
              <library id="spark-streaming_2.11-2.2.1.jar"/>
              <library id="spark-network-common_2.11-2.2.1.jar"/>
@@ -215,7 +246,7 @@
              <library id="javax.ws.rs-api-2.0-m10.jar"/>
              <library id="json_simple-1.1.jar"/>
         </libraryNeededGroup>
-        
+
         <!-- Spark Streaming group -->
         <libraryNeededGroup
                 description="SPARK libraries for Databricks"
@@ -224,6 +255,17 @@
              <library id="spark-streaming_2.11-2.2.1.jar"/>
         </libraryNeededGroup>
         
+        
+        <!-- Spark Streaming Kinesis group -->
+        <libraryNeededGroup
+                description="SPARK libraries for Databricks"
+                id="SPARK-STREAMING-LIB-KINESIS-DATABRICKS"
+                name="SPARK-STREAMING-LIB-KINESIS-DATABRICKS">
+             <library id="spark-streaming-kinesis-asl_2.11-2.2.0.jar"/>
+            <library id="amazon-kinesis-client-1.8.1.jar"/>
+            <library id="aws-java-sdk-kinesis-1.11.160.jar"/>
+            <library id="aws-java-sdk-core-1.11.160.jar"/>
+        </libraryNeededGroup>
         <!-- HiveOnSpark group -->
         <libraryNeededGroup
                 description="Hive On SPARK libraries for Databricks"
@@ -240,8 +282,7 @@
              <library id="hadoop-azure-datalake-2.8.1.jar"/>
              <library id="azure-data-lake-store-sdk-2.3.1.jar"/>            
         </libraryNeededGroup>
-        
-        
+
    </extension>
    <extension
          point="org.talend.core.runtime.classloader_provider">        
