Revert "fix(TDI41092):change the babili on 711 for mongoDB deprecated."
This reverts commit 392869b8d13109ffbfe4083d9314ca06ffc752e5.

--- a/main/plugins/org.talend.designer.components.bigdata/components/tMongoDBOutput/tMongoDBOutput_messages_slk.properties
+++ b/main/plugins/org.talend.designer.components.bigdata/components/tMongoDBOutput/tMongoDBOutput_messages_slk.properties
@@ -15,4 +15,4 @@ ROOT.NAME=Kore\u0148
 SCHEMA.NAME=Schéma
 USERNAME.NAME=U\u017Eívate\u013Eské Meno
 DB_VERSION.ITEM.MONGODB_2_5_X=MongoDB 2.5.X
-DB_VERSION.ITEM.MONGODB_2_6_X=MongoDB 2.6.X (Deprecated)
+DB_VERSION.ITEM.MONGODB_2_6_X=MongoDB 2.6.X
