--- a/main/plugins/org.talend.designer.components.bigdata/components/tMongoDBInput/tMongoDBInput_messages_slk.properties
+++ b/main/plugins/org.talend.designer.components.bigdata/components/tMongoDBInput/tMongoDBInput_messages_slk.properties
@@ -6,4 +6,4 @@ SORT.ITEM.ORDER.ITEM.ASC=asc
 USERNAME.NAME=U\u017Eívate\u013Eské Meno
 AUTHENTICATION.NAME=Autentifikácia
 DB_VERSION.ITEM.MONGODB_2_5_X=MongoDB 2.5.X
-DB_VERSION.ITEM.MONGODB_2_6_X=MongoDB 2.6.X (Deprecated)
+DB_VERSION.ITEM.MONGODB_2_6_X=MongoDB 2.6.X
