bugfix(TUP-2146): <Jasper><APM>There is a "Talend" node in Jasper ETL->Window->Show view
https://jira.talendforge.org/browse/TUP-2146

--- a/main/plugins/org.talend.rcp.branding.tos.bigdata/plugin.xml
+++ b/main/plugins/org.talend.rcp.branding.tos.bigdata/plugin.xml
@@ -104,5 +104,10 @@
                   talendPerspectiveId="org.talend.rcp.DesignPerspective">
             </TalendPerspective>
          </extension>
-         
+         <extension
+               point="org.eclipse.ui.views">
+             <category
+               id="org.talend.core.root"
+               name="Talend"/>
+         </extension>
 </plugin>
