--- a/main/plugins/org.talend.rcp.branding.tos.bigdata/plugin.xml
+++ b/main/plugins/org.talend.rcp.branding.tos.bigdata/plugin.xml
@@ -105,6 +105,13 @@
             </TalendPerspective>
          </extension>
          <extension
+               point="org.eclipse.ui.commands">
+            <command
+                  id="org.talend.rcp.show.about.command"
+                  name="About Talend Studio">
+            </command>
+         </extension>
+         <extension
                point="org.eclipse.ui.views">
              <category
                id="org.talend.core.root"
