feat(TUP-21337):Deprecate oozie (view/preferences)
https://jira.talendforge.org/browse/TUP-21337

--- a/main/plugins/org.talend.oozie.scheduler/plugin.xml
+++ b/main/plugins/org.talend.oozie.scheduler/plugin.xml
@@ -8,7 +8,7 @@
             class="org.talend.oozie.scheduler.views.TOozieView"
             icon="icons/oozie_schedule.gif"
             id="org.talend.oozie.scheduler.views.OozieSchedulerView"
-            name="Talend Oozie"
+            name="Talend Oozie (Deprecated)"
             restorable="true">
       </view>
    </extension>
@@ -18,7 +18,7 @@
             category="org.talend.designer.runprocess"
             class="org.talend.oozie.scheduler.ui.prefs.OozieExecutionPreferencePage"
             id="org.talend.oozie.scheduler.ui.prefs.OoziePreferencePage"
-            name="Oozie">
+            name="Oozie (Deprecated)">
       </page>
    </extension>
    <extension
